                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 15-04-2005 fixed: CUtil::URLEncode ignored '&' and '='
  - 15-04-2005 added: selectItem method to ControlList for python, thanks to sambarza.
  - 15-04-2005 updated: German language file
  - 15-04-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 15-04-2005 fixed: Double linebreak in TextBox caused repeated lines.
  - 15-04-2005 added: New built in function XBMC.EjectTray for opening/closing the dvd tray.
  - 15-04-2005 fixed: Adjust Frame Rate and PAL60 clash on 25fps files. 
  - 15-04-2005 added: audioscrobbler support
  - 15-04-2005 fixed: kai, crash when friend has no avatar
  - 15-04-2005 added: patch [ 1178392 ] Proxy support for shoutcast thanks to soepy.
  - 15-04-2005 fixed: bug [ 1180705 ] Empty Files and illegal fatx file names on SMB Server stops copy Process.
  - 15-04-2005 fixed: Togglebuttons weren't scaled on the fly correct (VideoOSD in PAL60 mode).
  - 15-04-2005 updated: libdvdnav.dll and libdvdcss-2.dll with support for largefiles (>2gb, using our custom headers)
  - 15-04-2005 added: added workround for next chapter/prev chapter which reuse global action_codes
  - 15-04-2005 fixed: Seeking didn't work at all in dvdplayer when playing dvd's
  - 15-04-2005 fixed: Initial highlight was displayed immidiatly when found instead of delayed as it should.
  - 15-04-2005 updated: Korean language file (Thnx to akoakoako)
  - 15-04-2004 updated: Dutch language file (Thnx to tijmengozer)
  - 14-04-2005 added: Music is muted 9dB on ffwd/rewd with mp3 player.
  - 14-04-2005 fixed: Fadelabels didn't fade out in visualisation on press of white.