@@ -1,5 +1,6 @@
 #include "stdafx.h"
 #include "AudioContext.h"
+#include "../xbmc/Settings.h"
 
 CAudioContext g_audioContext;
 
@@ -73,4 +74,33 @@ void CAudioContext::RemoveActiveDevice()
 
   SAFE_RELEASE(m_pAC97Device);
   SAFE_RELEASE(m_pDirectSoundDevice);
+}
+
+// \brief set a new speaker config
+void CAudioContext::SetupSpeakerConfig(int iChannels, bool& bAudioOnAllSpeakers)
+{
+  if (g_guiSettings.GetInt("AudioOutput.Mode") == AUDIO_DIGITAL)
+  {
+    if (g_guiSettings.GetBool("AudioOutput.OutputToAllSpeakers"))
+    {
+      bAudioOnAllSpeakers = true;
+      DirectSoundOverrideSpeakerConfig(DSSPEAKER_USE_DEFAULT);
+    }
+    else
+    {
+      if (iChannels == 1)
+        DirectSoundOverrideSpeakerConfig(DSSPEAKER_MONO);
+      else if (iChannels == 2)
+        DirectSoundOverrideSpeakerConfig(DSSPEAKER_STEREO);
+      else
+        DirectSoundOverrideSpeakerConfig(DSSPEAKER_USE_DEFAULT);
+    }
+  }
+  else // We don't want to use the Dolby Digital Encoder output. Downmix to surround instead.
+  {
+    if (iChannels == 1)
+      DirectSoundOverrideSpeakerConfig(DSSPEAKER_MONO);
+    else
+      DirectSoundOverrideSpeakerConfig(DSSPEAKER_USE_DEFAULT);
+  }
 }
